[gd_scene load_steps=19 format=2]

[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=1]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=2]
[ext_resource path="res://content/shared/projectiles/PathProjectile.gd" type="Script" id=3]
[ext_resource path="res://content/sounds/monster/walker/DomePunch01_01.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/Bastards/crunch_03.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/monster/walker/DomePunch01_02.wav" type="AudioStream" id=6]
[ext_resource path="res://content/sounds/Bastards/crunch_04.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/Bastards/crunch_02.wav" type="AudioStream" id=8]
[ext_resource path="res://content/monster/stag/spriteframes-AirProjectile.tres" type="SpriteFrames" id=9]
[ext_resource path="res://content/sounds/monster/butterfly/Frozenstep_v3_04.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/butterfly/Frozenstep_v3_02.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/monster/butterfly/Frozenstep_v3_03.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/monster/butterfly/Frozenstep_v3_05.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/Bastards/crunch_01.wav" type="AudioStream" id=15]

[sub_resource type="Gradient" id=198]
offsets = PoolRealArray( 0, 0.781646, 1 )
colors = PoolColorArray( 0.0627451, 0.92549, 0.705882, 1, 0.0627451, 0.92549, 0.705882, 1, 0.0627451, 0.92549, 0.705882, 0 )

[sub_resource type="GradientTexture" id=199]
gradient = SubResource( 198 )

[sub_resource type="ParticlesMaterial" id=197]
lifetime_randomness = 0.26
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.0627451, 0.92549, 0.705882, 1 )
color_ramp = SubResource( 199 )

[sub_resource type="CircleShape2D" id=127]
radius = 3.0

[node name="Projectile" type="Area2D" groups=["projectile"]]
z_index = 61
collision_layer = 256
collision_mask = 0
script = ExtResource( 3 )
rotation_offset = 0.0

[node name="Particles2D" type="Particles2D" parent="."]
amount = 6
lifetime = 0.2
local_coords = false
process_material = SubResource( 197 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 9 )
animation = "flying"
speed_scale = 2.0

[node name="ImpactSound" type="AudioStreamPlayer" parent="."]
volume_db = -1.117
pitch_scale = 0.82
bus = "World"
script = ExtResource( 2 )
randomPitch = 0.11
streams = [ ExtResource( 15 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ) ]

[node name="Sound" parent="ImpactSound" instance=ExtResource( 1 )]
volume_db = 4.602
pitch_scale = 1.7
bus = "World"
streams = [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 13 ) ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 127 )

[node name="ShieldedSound" parent="." instance=ExtResource( 1 )]
pitch_scale = 1.39
bus = "World"
streams = [ ExtResource( 4 ), ExtResource( 6 ) ]

[connection signal="area_entered" from="." to="." method="_on_Projectile_area_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
